<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1f1f1f">

    <RelativeLayout
        android:id="@+id/TopTitle"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#3a3a3a">
        <ImageView
            android:id="@+id/title_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/language"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/desc"/>
        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/title_icon"
            android:textSize="30sp"
            android:textColor="#dcdada"
            android:gravity="center"
            android:text="@string/configure" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/top_title_shadow"
        android:layout_below="@+id/TopTitle"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#323232"/>
    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/top_title_shadow"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="100dp">
        <RelativeLayout
            android:id="@+id/RelativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/LanTap"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">
                <TextView
                    android:id="@+id/LanTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textColor="#b7b6b6"
                    android:layout_alignParentRight="true"
                    android:text="@string/spinner_lang"/>
                <Spinner
                    android:id="@+id/SpinnerLan"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/LanTitle"
                    android:background="@drawable/spinner_bg"
                    android:paddingLeft="20dp"
                    android:prompt="@string/spinner_lang_eng"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LanTap_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/LanTap"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">
                <TextView
                    android:id="@+id/LanTitle_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textColor="#b7b6b6"
                    android:layout_alignParentRight="true"
                    android:text="@string/spinner_lang_2"/>
                <Spinner
                    android:id="@+id/SpinnerLan_2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/LanTitle_2"
                    android:background="@drawable/spinner_bg"
                    android:paddingLeft="20dp"
                    android:prompt="@string/spinner_lang_eng_2"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/FontTap"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/LanTap_2"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">
                <TextView
                    android:id="@+id/FontTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textColor="#b7b6b6"
                    android:layout_alignParentRight="true"
                    android:text="@string/spinner_font"/>
                <Spinner
                    android:id="@+id/SpinnerFont"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/FontTitle"
                    android:paddingLeft="20dp"
                    android:background="@drawable/spinner_bg"
                    android:prompt="@string/spinner_font_eng"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/FontTestContainer"
                android:layout_below="@+id/FontTap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/FontTestAr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:textColor="#8d8c8c"
                    android:text="@string/font_test_ar"/>
                <TextView
                    android:id="@+id/FontTestEn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/FontTestAr"
                    android:layout_marginTop="5dp"
                    android:layout_centerHorizontal="true"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textColor="#8d8c8c"
                    android:text="@string/font_test_en"/>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/Continue"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/ripple_effect"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/ContinueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continues"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="35sp"
            android:textColor="#dcdada" />
    </RelativeLayout>

</RelativeLayout>
