<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1f1f1f">
    <RelativeLayout
        android:id="@+id/TopTitle"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#3a3a3a">
        <ImageView
            android:id="@+id/title_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/reserved_icon"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/desc"/>
        <TextView
            android:id="@+id/reserved_words_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/title_icon"
            android:textSize="28sp"
            android:textColor="#dcdada"
            android:gravity="center"
            android:text="@string/reserved_words_title_text" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/TopTitle"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="90dp">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="10dp"
            android:scrollbars="none"
            android:divider="@android:color/transparent">
        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>
    <TextView
        android:id="@+id/no_reserved_words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:textColor="#dcdada"
        android:text="@string/no_reserved_words"/>
    <RelativeLayout
        android:id="@+id/confirmation_box"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_alignParentBottom="true">
        <RelativeLayout
            android:id="@+id/add_word"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/reset"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ripple_effect">
            <TextView
                android:id="@+id/add_word_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_word_text"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textSize="35sp"
                android:textColor="#dcdada" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/reset"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/spinner_bg">
            <ImageView
                android:id="@+id/reset_text"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/reset"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/desc"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
