<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp">
    <RelativeLayout
        android:id="@+id/head_icon"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true">
        <RelativeLayout
            android:id="@+id/head_icon_top"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:background="#00ffffff"/>
        <RelativeLayout
            android:id="@+id/head_icon_bottom"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_below="@+id/head_icon_top"
            android:background="@drawable/dialog_bg_top"/>
        <RelativeLayout
            android:id="@+id/title_box"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/dialog_icon_bg"
            android:layout_centerHorizontal="true">
            <ImageView
                android:id="@+id/to_text_file"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/text_file"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/desc"/>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head_icon"
        android:paddingBottom="20dp"
        android:background="@drawable/dialog_bg_bottom">
        <RelativeLayout
            android:id="@+id/set_file_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:background="#1f1f1f">
            <LinearLayout
                android:id="@+id/set_file_name_wall"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:background="#02a1be"
                android:orientation="horizontal"/>
            <EditText
                android:id="@+id/set_file_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/set_file_name_hint"
                android:padding="10dp"
                android:textColor="#000000"
                android:background="#eeeeee"
                android:layout_below="@+id/set_file_name_wall"
                android:gravity="right|center"
                android:maxLength="100"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:scrollbars = "none"/>
            <TextView
                android:id="@+id/set_file_name_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_file_name_desc"
                android:layout_below="@+id/set_file_name"
                android:layout_marginTop="5dp"
                android:paddingRight="10dp"
                android:layout_alignParentRight="true"
                android:textSize="20sp"
                android:layout_marginBottom="5dp"
                android:textColor="#8d8c8c" />
        </RelativeLayout>
        <Button
            android:id="@+id/confirmations"
            android:layout_width="match_parent"
            android:textColor="#ffffff"
            android:textSize="28sp"
            android:background="@drawable/ripple_effect"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/set_file_box"
            android:layout_height="50dp"
            android:text="@string/confirm" />
    </RelativeLayout>
</RelativeLayout>
